filter for price added

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,8 +29,50 @@
   overflow-y: auto;
 }
 
+.price_list_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.filter_list_price {
+  font-size: 1.2em;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 0;
+}
+
 .filter_list_element {
   padding-left: 0.5em;
+}
+
+.price_list_element {
+  width: 100%;
+
+  display: flex;
+  justify-self: center;
+  align-items: center;
+}
+
+.price_input_values {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price_input {
+  width: 80px;
+  height: 25px;
+
+  padding: 0.5em;
+}
+
+.price_input::-webkit-outer-spin-button,
+.price_input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .home_grid {
