--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-content: center;
+  gap: 50px;
 
   width: 60%;
 }
@@ -46,6 +47,19 @@
   font-size: 1.2em;
 }
 
+.rating {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 1.5em;
+}
+
+.point {
+  color: #333;
+}
+
 .buttons_container {
   display: flex;
+  align-items: center;
+  gap: 20px;
 }
