--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -17,7 +17,10 @@
   top: 3%;
 }
 
-.product_image_wrapper img {
+.product_image_wrapper {
+  position: relative;
+  width: 200px;
+  height: 250px;
   object-fit: cover;
   border-radius: 0.3em;
 }
