zoom feature for product images added

--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -63,3 +63,15 @@
   align-items: center;
   gap: 20px;
 }
+
+.zoomed_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 600px;
+  height: 600px;
+  border: 1px solid black;
+  background-repeat: no-repeat;
+  background-position: center;
+}
