--- a/styles/ProductImage.module.css
+++ b/styles/ProductImage.module.css
@@ -68,3 +68,13 @@
 .arrow_right {
   right: 5%;
 }
+
+.square_cursor {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  border: 1px solid black;
+  user-select: none;
+  pointer-events: none;
+}
