--- a/styles/FavoriteButton.module.css
+++ b/styles/FavoriteButton.module.css
@@ -9,7 +9,10 @@
   background-color: wheat;
   border-radius: 50%;
 
+  position: absolute;
+  right: 0%;
   cursor: pointer;
+  z-index: 1;
 }
 
 .favorite_button_icon_square {
