--- a/styles/FavoriteButton.module.css
+++ b/styles/FavoriteButton.module.css
@@ -1,4 +1,5 @@
-.favorite_button_icon {
+.favorite_button_icon,
+.favorite_button_icon_selected {
   width: 40px;
   height: 40px;
 
@@ -15,7 +16,12 @@
   z-index: 1;
 }
 
-.favorite_button_icon_square {
+.favorite_button_icon_selected {
+  color: #477519;
+}
+
+.favorite_button_icon_square,
+.favorite_button_icon_square_selected {
   border: 1px solid #477519;
   outline: none;
   cursor: pointer;
@@ -29,6 +35,11 @@
   justify-content: center;
   align-items: center;
   color: green;
+}
+
+.favorite_button_icon_square_selected {
+  background-color: #477519;
+  color: white;
 }
 
 .favorite_button_icon:hover {
