--- a/styles/Collections.module.css
+++ b/styles/Collections.module.css
@@ -1,7 +1,14 @@
+.container {
+  position: relative;
+  overflow: hidden;
+}
+
 .collections_wrapper {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   padding: 1.5rem;
+  min-height: 100vh;
 }
 
 .create_new_collection_button {
@@ -23,4 +30,117 @@
 .create_new_collection_button:hover {
   background-color: #477519;
   color: white;
+}
+
+.create_new_collection_modal {
+  position: absolute;
+  width: 30%;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+
+  transform: translateX(-50%) translateY(-50%);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border: 1px solid black;
+  background-color: white;
+  z-index: 2;
+}
+
+.modal_close_button {
+  align-self: flex-end;
+}
+
+.bookmark_icon {
+  align-self: center;
+  background-color: lightgreen;
+  color: #477519;
+  border-radius: 50%;
+  padding: 1rem;
+  font-size: 1.25rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_header_and_input_wrapper {
+  position: relative;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.create_new_collection_header {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.create_new_collection_input {
+  outline: none;
+  border: none;
+  border-radius: 0.2em;
+  height: 40px;
+  border: 1px solid black;
+  width: 100%;
+  padding: 0 1em;
+  font-size: 14px;
+}
+
+.create_new_collection_input:hover {
+  border: 1px solid #477519;
+}
+
+.create_new_collection_input:focus {
+  outline: 1px solid #477519;
+}
+
+.create_new_collection_submit_button {
+  align-self: center;
+  outline: none;
+  border: none;
+
+  width: 60%;
+  height: 40px;
+  padding: 1.5em;
+  border-radius: 0.3em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+
+  background-color: #588620;
+  cursor: pointer;
+}
+
+.create_new_collection_submit_button:hover {
+  background-color: #477519;
+  box-shadow: 0 0 5px 0 #477519;
+  color: white;
+}
+
+.outline {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+.overlay {
+  position: absolute;
+  background-color: black;
+  opacity: 0.3;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+
+  overflow: hidden;
+  z-index: 1;
 }
