--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -17,12 +17,18 @@
   top: 3%;
 }
 
-.product_image_wrapper {
+.product_image_wrapper,
+.product_image_wrapper_collection {
   position: relative;
   width: 200px;
   height: 250px;
   object-fit: cover;
   border-radius: 0.3em;
+}
+
+.product_image_wrapper_collection {
+  width: 160px;
+  height: 200px;
 }
 
 .product_information {
