--- a/styles/Collections.module.css
+++ b/styles/Collections.module.css
@@ -13,7 +13,7 @@
 
 .collections_grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 300px);
   grid-template-rows: auto;
 }
 
