--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
 
+  max-width: 250px;
+  height: 300px;
   border-radius: 0.3em;
 
   border: 1px solid #ccc;
@@ -20,15 +22,15 @@
 .product_image_wrapper,
 .product_image_wrapper_collection {
   position: relative;
-  width: 200px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 0.3em;
 }
 
 .product_image_wrapper_collection {
-  width: 160px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .product_information {
