--- a/styles/collectionBubble.module.css
+++ b/styles/collectionBubble.module.css
@@ -35,6 +35,12 @@
   border-bottom: 1px solid black;
   padding: 0.2em 0.5em;
   font-weight: bold;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  position: relative;
 }
 
 .collection {
@@ -54,4 +60,45 @@
 .collection_images image {
   object-fit: cover;
   border-radius: 0.3em;
+}
+
+.options,
+.options_hidden {
+  position: absolute;
+  width: fit-content;
+  height: fit-content;
+  white-space: nowrap;
+
+  padding: 1em 0.5em;
+
+  background-color: red;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  opacity: 1;
+  pointer-events: all;
+  user-select: auto;
+
+  transition: opacity 0.2s ease-in-out;
+}
+
+.options_hidden {
+  opacity: 0;
+  pointer-events: none;
+  user-select: none;
+}
+
+.option {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  gap: 20px;
+  border-bottom: 1px solid black;
+}
+
+.option svg {
+  pointer-events: none;
 }
