--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100vh;
 
   padding: 1em 0;
 }
@@ -67,6 +68,24 @@
   color: #333;
 }
 
+.add_to_collection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-size: 14px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.add_to_collection svg {
+  color: #477519;
+}
+
+.add_to_collection:hover {
+  color: #477519;
+}
+
 .buttons_container {
   display: flex;
   align-items: center;
@@ -90,4 +109,11 @@
 .zoomed_image_hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.overlay {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
 }
