--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
 
   padding: 1em 0;
 }
@@ -111,9 +110,40 @@
   pointer-events: none;
 }
 
-.overlay {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
+.collection_list {
+  position: fixed;
+  width: 300px;
+  height: 500px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  z-index: 9999;
+  border-radius: 0.3em;
+  padding: 0.5em;
+}
+
+.collection_list_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 0.3em;
+  font-size: 24px;
+  border-bottom: 1px solid black;
+}
+
+.collection_list_container {
+  padding: 1em 0.5em;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 350px;
+
+  gap: 20px;
+
+  overflow: hidden;
+  overflow-y: auto;
 }
