--- a/styles/availableCollectionItems.module.css
+++ b/styles/availableCollectionItems.module.css
@@ -1,5 +1,5 @@
 .select_collection_items {
-  position: absolute;
+  position: fixed;
   width: 40%;
   min-height: 500px;
   height: 500px;
@@ -18,6 +18,7 @@
   border-radius: 0.2em;
 
   padding: 1em;
+  z-index: 9999;
 }
 
 .select_from_collection_items_header {
