--- a/styles/collectionBubble.module.css
+++ b/styles/collectionBubble.module.css
@@ -66,3 +66,14 @@
   object-fit: cover;
   border-radius: 0.3em;
 }
+
+.empty_collection_images {
+  background-color: #ddd;
+  color: gray;
+  padding: 0.5em;
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
