--- a/styles/cartItem.module.css
+++ b/styles/cartItem.module.css
@@ -1,11 +1,19 @@
 .cart_item_wrapper {
   background-color: #ccc;
-  width: 70%;
+  width: 40%;
   padding: 1em;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.product_image {
+  position: relative;
+  width: 80px;
+  height: 120px;
+  border-radius: 0.3em;
+  overflow: hidden;
 }
 
 .quantity_settings {
