--- a/styles/myAccountPageStyles/addressInformation.module.css
+++ b/styles/myAccountPageStyles/addressInformation.module.css
@@ -1,34 +1,55 @@
 .address_information_wrapper {
+  padding: 1.5rem;
+
   position: relative;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
-  height: 100%;
+  height: 100vh;
+
+  overflow: hidden;
+
+  z-index: 1;
 }
 
-.addresses {
+.section_container {
   position: absolute;
 
   display: flex;
   flex-direction: column;
+  width: 80%;
+  height: 70%;
+
+  padding: 1.5em;
+  border: 1px solid black;
+}
+
+.grid_wrapper {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 
   width: 100%;
   height: 100%;
-  background-color: red;
-
-  padding: 1.5em;
 }
 
 .saved_address_grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-
   gap: 20px;
 
+  width: 100%;
+  height: 90%;
   max-height: 90%;
   overflow: hidden;
   overflow-y: auto;
+
+  padding-top: 1.5em;
 }
 
 .create_address_button {
