--- a/styles/myAccountPageStyles/dropdownMenu.module.css
+++ b/styles/myAccountPageStyles/dropdownMenu.module.css
@@ -1,4 +1,7 @@
-.dropdown_menu_wrapper {
+.dropdown_menu_wrapper,
+.dropdown_menu_wrapper_province,
+.dropdown_menu_wrapper_disabled,
+.dropdown_menu_wrapper_danger {
   position: relative;
 
   display: flex;
@@ -15,6 +18,22 @@
   border: 1px solid black;
 
   font-size: 18px;
+
+  cursor: pointer;
+
+  background-color: white;
+
+  pointer-events: auto;
+}
+
+.dropdown_menu_wrapper_disabled {
+  background-color: #333;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.dropdown_menu_wrapper_danger {
+  border: 1px solid red;
 }
 
 .dropdown_menu_list {
