--- a/styles/cartPageStyles/cart.module.css
+++ b/styles/cartPageStyles/cart.module.css
@@ -50,3 +50,42 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.choose_address_modal {
+  position: absolute;
+
+  left: 50%;
+  top: 15%;
+
+  transform: translateX(-50%);
+
+  background-color: white;
+
+  padding: 1.5rem;
+
+  border: 1px solid black;
+}
+
+.choose_address_modal_header {
+  font-size: 24px;
+  font-weight: bold;
+
+  padding-bottom: 1em;
+
+  border-bottom: 1px solid black;
+}
+
+.choose_address_grid {
+  padding-top: 1rem;
+  width: 500px;
+  height: 500px;
+
+  overflow: hidden;
+  overflow-y: auto;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+
+  gap: 20px;
+}
