--- a/styles/myAccountPageStyles/savedAddress.module.css
+++ b/styles/myAccountPageStyles/savedAddress.module.css
@@ -1,4 +1,5 @@
-.saved_address_wrapper {
+.saved_address_wrapper,
+.saved_address_wrapper_cart {
   position: relative;
   background-color: yellow;
 
@@ -6,6 +7,14 @@
   border-radius: 0.3em;
 
   max-height: 200px;
+}
+
+.saved_address_wrapper_cart {
+  border: 3px solid gray;
+}
+
+.saved_address_wrapper_cart_selected {
+  border: 3px solid green;
 }
 
 .address_options {
