--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,14 @@
   box-sizing: border-box;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap");
+
 body,
 h1 {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
