--- a/styles/myAccountPageStyles/myAccount.module.css
+++ b/styles/myAccountPageStyles/myAccount.module.css
@@ -17,8 +17,9 @@
 
 .section_container {
   border: 1px solid black;
+  border-radius: 0.3em;
 
-  width: 80%;
+  width: 60%;
   height: 70%;
 
   display: flex;
