media query added for MyAccount page

--- a/styles/myAccountPageStyles/accountInformation.module.css
+++ b/styles/myAccountPageStyles/accountInformation.module.css
@@ -11,7 +11,7 @@
 
 .information_container_columns {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -22,19 +22,6 @@
   align-items: flex-start;
 
   gap: 40px;
-}
-
-.input_container {
-  display: flex;
-  align-items: center;
-
-  gap: 20px;
-}
-
-.header {
-  font-size: 18px;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
 }
 
 .update_button,
@@ -75,6 +62,12 @@
   color: #fcfcfc;
 }
 
+.header {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
 .cellphone_number {
   display: flex;
   align-items: center;
@@ -87,36 +80,6 @@
   align-items: center;
 
   gap: 20px;
-}
-
-.cellphone_number_input input {
-  width: 160px;
-  height: 40px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border-radius: 0.3em;
-
-  padding: 0.1em 0.3em;
-
-  border: 1px solid black;
-
-  font-size: 18px;
-
-  appearance: textfield;
-  overflow: hidden;
-}
-
-.cellphone_number_input input::-webkit-inner-spin-button,
-.cellphone_number_input input::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.cellphone_number_input input {
-  -moz-appearance: textfield;
 }
 
 .gender_selection {
@@ -143,4 +106,53 @@
 .female {
   width: 50px;
   cursor: pointer;
+}
+
+@media all and (max-width: 1280px) {
+  .header {
+    font-size: 12px;
+  }
+
+  .information_container_columns {
+    justify-content: space-around;
+  }
+}
+
+@media all and (max-width: 980px) {
+  .cellphone_number {
+    gap: 10px;
+  }
+
+  .cellphone_number_inputs {
+    gap: 10px;
+  }
+
+  .information_container {
+    gap: 10px;
+  }
+}
+
+@media all and (max-width: 820px) {
+  .information_container_columns {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .information_container {
+    align-items: center;
+  }
+
+  .cellphone_number {
+    width: 200px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .update_button button,
+  .update_button_active button {
+    width: 90px;
+    height: 30px;
+
+    font-size: 12px;
+  }
 }
