--- a/styles/myAccountPageStyles/accountInformationInput.module.css
+++ b/styles/myAccountPageStyles/accountInformationInput.module.css
@@ -1,3 +1,16 @@
+.input_container {
+  display: flex;
+  align-items: center;
+
+  gap: 20px;
+}
+
+.header {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
 .account_information_input,
 .account_information_input_email {
   width: 150px;
@@ -7,8 +20,62 @@
 
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
+
+  transition: width ease-in-out 0.2s;
 }
 
 .account_information_input_email {
   width: 300px;
+}
+
+.account_information_input::-webkit-inner-spin-button,
+.account_information_input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+  -moz-appearance: textfield;
+}
+
+@media all and (max-width: 1280px) {
+  .header {
+    font-size: 10px;
+  }
+
+  .account_information_input {
+    width: 120px;
+    height: 24px;
+
+    font-size: 10px;
+  }
+
+  .account_information_input_email {
+    width: 180px;
+    font-size: 10px;
+  }
+}
+
+@media all and (max-width: 980px) {
+  .account_information_input {
+    width: 80px;
+    height: 24px;
+  }
+
+  .account_information_input_email {
+    width: 140px;
+  }
+}
+
+@media all and (max-width: 820px) {
+  .input_container {
+    width: 200px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    gap: 2px;
+  }
+
+  .account_information_input {
+    width: 80%;
+  }
 }
