--- a/styles/myAccountPageStyles/dropdownMenu.module.css
+++ b/styles/myAccountPageStyles/dropdownMenu.module.css
@@ -8,8 +8,8 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 80px;
-  height: 40px;
+  width: 60px;
+  height: 30px;
 
   border-radius: 0.3em;
 
@@ -79,4 +79,26 @@
 
 .option:hover {
   background-color: red;
+}
+
+@media all and (max-width: 1280px) {
+  .dropdown_menu_wrapper {
+    width: 48px;
+    height: 24px;
+
+    font-size: 16px;
+  }
+
+  .dropdown_menu_list {
+    width: 60px;
+  }
+}
+
+@media all and (max-width: 980px) {
+  .dropdown_menu_wrapper {
+    width: 50px;
+    height: 25px;
+
+    font-size: 14px;
+  }
 }
