--- a/styles/myAccountPageStyles/addressInformation.module.css
+++ b/styles/myAccountPageStyles/addressInformation.module.css
@@ -39,9 +39,9 @@
 
 .saved_address_grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-template-rows: auto;
-  gap: 20px;
+  gap: 10px;
 
   width: 100%;
   height: 90%;
@@ -53,5 +53,11 @@
 }
 
 .create_address_button {
-  align-self: center;
+  position: absolute;
+
+  bottom: 2%;
+
+  background: none;
+  outline: none;
+  border: none;
 }
