--- a/styles/myAccountPageStyles/orders.module.css
+++ b/styles/myAccountPageStyles/orders.module.css
@@ -36,3 +36,20 @@
 
   gap: 10px;
 }
+
+.empty_orders {
+  color: #333;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 10px;
+
+  font-size: 2em;
+
+  padding-bottom: 2em;
+}
