--- a/styles/categoryPageStyles/averageReview.module.css
+++ b/styles/categoryPageStyles/averageReview.module.css
@@ -15,3 +15,25 @@
   font-size: 1.2em;
   pointer-events: none;
 }
+
+@media all and (max-width: 1080px) {
+  .average_customer_review_list svg {
+    font-size: 0.7em;
+  }
+}
+
+@media all and (max-width: 540px) {
+  .average_customer_review_list svg {
+    font-size: 0.5em;
+  }
+}
+
+@media all and (max-width: 280px) {
+  .average_customer_review_list svg {
+    font-size: 0.4em;
+  }
+
+  .average_customer_review_list span {
+    font-size: 0.4em;
+  }
+}
