--- a/styles/categoryPageStyles/filterListHeader.module.css
+++ b/styles/categoryPageStyles/filterListHeader.module.css
@@ -3,15 +3,35 @@
   font-size: 1.2em;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .filter_title span {
   cursor: pointer;
   user-select: none;
+  white-space: nowrap;
 }
 
 .filter_title_arrow {
   font-size: 1.2em;
   align-self: flex-end;
+}
+
+@media all and (max-width: 1080px) {
+  .filter_title {
+    font-size: 0.9em;
+  }
+}
+
+@media all and (max-width: 540px) {
+  .filter_title {
+    font-size: 0.7em;
+  }
+}
+
+@media all and (max-width: 280px) {
+  .filter_title {
+    font-size: 0.5em;
+    justify-content: space-between;
+  }
 }
