--- a/styles/categoryPageStyles/productPage.module.css
+++ b/styles/categoryPageStyles/productPage.module.css
@@ -1,8 +1,9 @@
 .product_page_wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  min-height: 100vh;
 
   padding: 1em 0;
 }
@@ -34,6 +35,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+
+  min-width: 300px;
 
   gap: 20px;
   opacity: 1;
@@ -108,4 +111,85 @@
 .zoomed_image_hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+@media all and (max-width: 1080px) {
+  .product_title {
+    font-size: 1.5em;
+  }
+
+  .product_description {
+    font-size: 1em;
+  }
+
+  .rating {
+    font-size: 1em;
+  }
+
+  .add_to_collection {
+    font-size: 10px;
+  }
+}
+
+@media all and (max-width: 820px) {
+  .product_page_wrapper {
+    padding: 0;
+    justify-content: space-between;
+  }
+
+  .product_info_wrapper {
+    width: 80%;
+    height: 100%;
+
+    justify-content: space-around;
+    align-items: flex-start;
+
+    padding-top: 1em;
+  }
+
+  .product_info {
+    min-width: 150px;
+  }
+
+  .product_images_container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    gap: 0;
+  }
+
+  .zoomed_image {
+    width: 400px;
+    height: 400px;
+  }
+
+  .add_to_cart_button {
+    width: 120px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .product_info_wrapper {
+    width: 100%;
+    height: 100%;
+
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    gap: 5px;
+  }
+
+  .zoomed_image {
+    width: 120px;
+    height: 120px;
+  }
+
+  .product_description {
+    font-size: 0.8em;
+  }
 }
