--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap");
