--- a/styles/myAccountPageStyles/dropdownMenu.module.css
+++ b/styles/myAccountPageStyles/dropdownMenu.module.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 60px;
+  width: 160px;
   height: 30px;
 
   border-radius: 0.3em;
@@ -17,7 +17,9 @@
 
   border: 1px solid black;
 
-  font-size: 18px;
+  font-size: 14px;
+
+  white-space: nowrap;
 
   cursor: pointer;
 
@@ -36,13 +38,20 @@
   border: 1px solid red;
 }
 
+.dropdown_menu_value {
+  max-width: 140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .dropdown_menu_list {
   position: absolute;
 
   left: 0;
   top: 100%;
 
-  width: 80px;
+  width: 160px;
   height: 300px;
 
   padding: 0.3em 0.1em;
@@ -82,7 +91,8 @@
 }
 
 @media all and (max-width: 1280px) {
-  .dropdown_menu_wrapper {
+  .dropdown_menu_wrapper,
+  .dropdown_menu_wrapper_disabled {
     width: 48px;
     height: 24px;
 
@@ -95,7 +105,8 @@
 }
 
 @media all and (max-width: 980px) {
-  .dropdown_menu_wrapper {
+  .dropdown_menu_wrapper,
+  .dropdown_menu_wrapper_disabled {
     width: 50px;
     height: 25px;
 
