UpdateButton component removed, CustomButton component added

--- a/styles/myAccountPageStyles/savedAddress.module.css
+++ b/styles/myAccountPageStyles/savedAddress.module.css
@@ -1,5 +1,6 @@
 .saved_address_wrapper,
-.saved_address_wrapper_cart {
+.saved_address_wrapper_cart,
+.saved_address_wrapper_cart_selected {
   position: relative;
   background-color: white;
 
