--- a/styles/cartPageStyles/cart.module.css
+++ b/styles/cartPageStyles/cart.module.css
@@ -39,6 +39,8 @@
   align-items: center;
 
   border: 1px solid black;
+
+  padding: 0.5em 0;
 }
 
 .order_summary {
@@ -65,7 +67,7 @@
 
   border: 1px solid black;
 
-  z-index: 10;
+  z-index: 1000;
 }
 
 .choose_address_modal_header {
@@ -83,17 +85,27 @@
 
 .choose_address_grid {
   padding-top: 1rem;
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 400px;
 
   overflow: hidden;
   overflow-y: auto;
 
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   grid-template-rows: auto;
 
   gap: 20px;
+}
+
+.order_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding-top: 1em;
+
+  border-top: 1px solid black;
 }
 
 @media all and (max-width: 760px) {
