--- a/styles/commonComponentStyles/header.module.css
+++ b/styles/commonComponentStyles/header.module.css
@@ -19,12 +19,17 @@
   transition: all 0.2s ease-in-out;
 }
 
+.input_wrapper {
+  flex-shrink: 0;
+
+  position: relative;
+}
+
 .input {
   border: none;
   outline: none;
   width: 500px;
   height: 30px;
-  flex-shrink: 0;
 
   border-radius: 0.3em;
   transition: all 0.2s ease-in-out;
@@ -71,7 +76,7 @@
     gap: 15px;
   }
 
-  .input {
+  .input_wrapper {
     flex-shrink: 1;
   }
 
@@ -143,7 +148,7 @@
     font-size: 6px;
   }
 
-  .input {
+  .input_wrapper {
     width: 50px;
   }
 }
